<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/auth_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:text="Email" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:text="Email" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_title"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:text="Password" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/feedback_button"
        android:text="Login"
        android:onClick="AuthBlihAPI"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/white" />
    <TextView
        android:id="@+id/github_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="You liked this project ? Star on Github !"
        android:textColor="@color/white"
        android:clickable="true"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>
</RelativeLayout>
