<resources>
    <string name="app_name">Blih</string>
    <string name="action_logout">Log out</string>
    <string name="action_search">Search</string>
    <string name="server_url">https://blih-preprod.cleverapps.io</string>
    <string name="acl_list">/api/repo/acl/list</string>
    <string name="delete">/api/repo/delete</string>
    <string name="update_acl">/api/repo/acl/update</string>
    <string name="search_repository">Search repository...</string>
    <string-array name="acls_editor">
        <item>r</item>
        <item>rw</item>
        <item>None</item>
    </string-array>
    <string-array name="acls_creator">
        <item>r</item>
        <item>rw</item>
    </string-array>
</resources>
