<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="blih.epitools.com.mobileblih.Activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/repo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scrollbars="vertical" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:onClick="createProject"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add_black_24dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="No Repositories"
        android:textSize="30dp"
        android:visibility="gone"
        android:id="@+id/no_repo"
        android:textStyle="bold" />
</RelativeLayout>
