<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/copy_url_repo"
        android:title="@string/delete"
        android:icon="@drawable/ic_content_copy"
        android:orderInCategory="10"
        app:showAsAction="always"/>
    <item android:id="@+id/action_delete"
    android:title="@string/delete"
    android:icon="@drawable/ic_delete"
    android:orderInCategory="10"
    app:showAsAction="always"/>

</menu>